--- a/app/views/m.header.html
+++ b/app/views/m.header.html
@@ -49,8 +49,8 @@
             </div>
             <a class="hambergurmenuload" ng-click="homeAction()">Companies</a>
             <a class="hambergurmenuload" ng-click="locationsPageAction()">Locations</a>
-            <a class="hambergurmenuload" ng-click="balanceSheetAction()">Over all balance sheet</a>
-            <a class="hambergurmenuload" ng-click="profitAndLossAction()">Over all P & L</a>
+            <a class="hambergurmenuload" ng-click="balanceSheetAction()">Overall balance sheet</a>
+            <a class="hambergurmenuload" ng-click="profitAndLossAction()">Overall P & L</a>
             <a class="hambergurmenuload" ng-click="usersPageAction()">Directory</a>
             <a class="hambergurmenuload" ng-click="clientLogout()">Logout</a>
         </div>
@@ -173,6 +173,11 @@
                     </div>
                 </div>
             </div>
+            <div class="modal-footer m-location-footer-size" style="margin-top:10px;">
+                <div class="row no-margin-hr">
+                </div>
+            </div>
         </div>
+
     </div>
 </div>
