--- a/app/views/m.voucherdetails.html
+++ b/app/views/m.voucherdetails.html
@@ -70,8 +70,8 @@
 <div id="imagePreview" class="modal fade" data-backdrop="static" data-keyboard="false" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content mdl-margin">
-            <div class="modal-header no-padding-vr-bottom">
-                <button type="button" class="close close-button-voucherscreen" data-dismiss="modal" aria-hidden="true" ng-click="cancelForm()">&times;</button>
+            <div class="modal-header">
+                <!-- <button type="button" class="close close-button-voucherscreen" data-dismiss="modal" aria-hidden="true" ng-click="cancelForm()">&times;</button> -->
                 <h1 class="modal-title">Image Preview</h1>
             </div>
             <div class="modal-body no-padding-vr-bottom">
@@ -82,7 +82,8 @@
                 </form>
             </div>
             <div class="modal-footer" style="margin-top:10px;">
-                <div class="row no-margin-hr">
+                <div class="row no-margin-hr" style="text-align:center;">
+                    <button type="button" class="btn background-defalt save-cancel-button voucher-modal-close" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
@@ -91,8 +92,8 @@
 <div id="audioplay" class="modal fade" data-backdrop="static" data-keyboard="false" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content mdl-margin">
-            <div class="modal-header no-padding-vr-bottom">
-                <button type="button" class="close close-button-voucherscreen" data-dismiss="modal" aria-hidden="true" ng-click="cancelaudioForm()">&times;</button>
+            <div class="modal-header">
+                <!-- <button type="button" class="close close-button-voucherscreen" data-dismiss="modal" aria-hidden="true" ng-click="cancelaudioForm()">&times;</button> -->
                 <h1 class="modal-title">Audio Play</h1>
             </div>
             <div class="modal-body no-padding-vr-bottom text-center">
@@ -101,7 +102,8 @@
                   </audio>
             </div>
             <div class="modal-footer" style="margin-top:10px;">
-                <div class="row no-margin-hr">
+                <div class="row no-margin-hr" style="text-align:center;">
+                    <button type="button" class="btn background-defalt save-cancel-button voucher-modal-close" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
@@ -110,8 +112,8 @@
 <div id="fileshow" class="modal fade" data-backdrop="static" data-keyboard="false" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content mdl-margin">
-            <div class="modal-header no-padding-vr-bottom">
-                <button type="button" class="close close-button-voucherscreen" data-dismiss="modal" aria-hidden="true" ng-click="cancelForm()">&times;</button>
+            <div class="modal-header">
+                <!-- <button type="button" class="close close-button-voucherscreen" data-dismiss="modal" aria-hidden="true" ng-click="cancelForm()">&times;</button> -->
                 <h1 class="modal-title">File Preview</h1>
             </div>
             <div class="modal-body no-padding-vr-bottom text-center">
@@ -119,7 +121,8 @@
                 </iframe>
             </div>
             <div class="modal-footer" style="margin-top:10px; ">
-                <div class="row no-margin-hr ">
+                <div class="row no-margin-hr" style="text-align:center;">
+                    <button type="button" class="btn background-defalt save-cancel-button voucher-modal-close" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
