--- a/app/views/m.user.html
+++ b/app/views/m.user.html
@@ -11,9 +11,9 @@
     <div class="col-sm-12 col-xs-12 no-padding-hr">
         <ul ng-repeat="user in users" class="list-styles no-padding-hr">
             <li class="m-custom-content-border m-list-align-left-right">
-                <span class="m-main-field" style="width:calc(100% - 45px);">{{user.username}}</span>
+                <span class="m-main-field" style="width:calc(100% - 70px);">{{user.username}}</span>
                 <a class="pull-right m-phoneNumber" ng-show="user.mobile" href="tel:{{user.mobile}}"><img width="32" height="32" src="images/call-icon.png" /></a>
-                <span class="m-sub-field">{{user.email}}{{user.mobile}}</span>
+                <span class="m-sub-field">{{user.mobile}}</span>
             </li>
         </ul>
     </div>
