--- a/app/views/m.login.html
+++ b/app/views/m.login.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <div class="col-md-4 col-md-offset-4 col-xs-12 col-sm-12">
                 <div class="text-center">
-                    <img style="margin-top:80px;margin-bottom:50px;margin-left:-8px;" src="images/portal-blue.png"  />
+                    <img style="margin-top:80px;margin-bottom:50px;margin-left:-8px;" src="images/portal-blue.png" />
                 </div>
                 <div ng-show="showerror" class="col-md-12 no-padding-hr">
                     <span style="color:#EF5F5F">{{errormessage}}</span>
@@ -19,7 +19,8 @@
                     </div>
                     <div class="row form-group">
                         <div class="col-md-12 col-xs-12 col-sm-12">
-                            <input type="{{passwordtext}}" class="form-control" ng-model="user.password" name="password" id="password" placeholder="Enter password" required="required" ng-minlength="4" ng-change="editingfields()" ng-blur="validationpasswordblur(user.password)">
+                            <input type="{{passwordtext}}" class="form-control" ng-model="user.password" name="password" id="password" placeholder="Enter password" required="required" ng-minlength="4" ng-change="editingfields()" ng-blur="validationpasswordblur(user.password)" autocomplete="off"
+                                autocorrect="off" autocapitalize="off">
                             <span class="glyphicon glyphicon-eye-open pull-right eye-icon-position-login" ng-click="showPassword()" ng-if="passwordtext==='password'"></span>
                             <span class="glyphicon glyphicon-eye-close pull-right eye-icon-position-login" ng-click="showPassword()" ng-if="passwordtext==='text'"></span>
                         </div>
