--- a/app/views/monthWise.html
+++ b/app/views/monthWise.html
@@ -1,4 +1,4 @@
-<div id="mainpageContollerStart" class="container table_container balancesheetheadermove table-container-width no-padding-hr" ng-class="{'isSearchHeaderSectionHeightInVocherScreen':!isSearched}">
+<div id="mainpageContollerStart" class="container table_container balancesheetheadermove table-container-width no-padding-hr isSearchHeaderSectionHeightInBalanceSheet">
     <div class="row no-margin-hr">
         <div class="col-md-12 no-padding-hr">
             <ul class="list-styles no-padding-hr">
