--- a/app/views/voucher.html
+++ b/app/views/voucher.html
@@ -1,4 +1,4 @@
-<div class="container table_container  table-container-width no-padding-hr" ng-class="{'isSearchHeaderSectionHeightInVocherScreen':!isSearched}">
+<div class="container table_container  isSearchHeaderSectionHeightInVocherScreen table-container-width no-padding-hr" ng-class="{'isSearchHeaderSectionHeightInVocherDetails':isSearched}">
     <div class="row no-margin-hr">
         <div class="col-md-12 no-padding-hr">
 
