--- a/app/views/location.html
+++ b/app/views/location.html
@@ -21,7 +21,7 @@
                                     <label class="mdl_label control-label" autofocus="none">Name<span>:</span><span class="astrick-label glyphicon glyphicon-asterisk"></span></label>
                                 </div>
                                 <div class="col-md-8 no-padding-hr">
-                                    <input type="text" ng-class="{'haserror':field===fields.name}" class="form-control req-field-color" placeholder="Enter the Location name" name="name " required="required " ng-model="props.display_name" ng-change="validations()" maxlength="45">
+                                    <input type="text" ng-class="{'haserror':field===fields.name}" class="form-control req-field-color" placeholder="Enter the Location name" name="addnamefield" required="required " ng-model="props.display_name" ng-change="validations()" maxlength="45">
                                 </div>
                             </div>
                             <div class="col-md-6 form-group no-padding-hr ">
@@ -259,7 +259,7 @@
                                 <label class="mdl_label control-label" autofocus="none">Name<span>:</span><span class="astrick-label glyphicon glyphicon-asterisk"></span></label>
                             </div>
                             <div class="col-md-8 no-padding-hr">
-                                <input type="text" ng-class="{'haserror':field===fields.name}" class="form-control req-field-color" placeholder="Enter the Location name " name="name " required="required " ng-model="props.display_name" ng-change="validations()" maxlength="45">
+                                <input type="text" ng-class="{'haserror':field===fields.name}" class="form-control req-field-color" placeholder="Enter the Location name " name="editnamefield" required="required " ng-model="props.display_name" ng-change="validations()" maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-6 form-group no-padding-hr ">
