--- a/app/views/backup.html
+++ b/app/views/backup.html
@@ -92,7 +92,8 @@
                                 <label class="mdl_label control-label" autofocus="none ">Company Name<span>:</span><span class="astrick-label glyphicon glyphicon-asterisk"></span></label>
                             </div>
                             <div class="col-md-8 no-padding-hr ">
-                                <input type="text" ng-class="{'haserror':field===fields.companyname}" class="form-control req-field-color" placeholder="Enter the Company name" name="companyname " required="required " ng-model="props.company_name " ng-change="fieldschangeAction()" maxlength="45">
+                                <input type="text" ng-class="{'haserror':field===fields.companyname}" class="form-control req-field-color" placeholder="Enter the Company name" name="addcompanyname" required="required " ng-model="props.company_name " ng-change="fieldschangeAction()"
+                                    maxlength="45">
                             </div>
                         </div>
                         <div class="col-md-12 form-group no-padding-hr">
