--- a/app/views/header.html
+++ b/app/views/header.html
@@ -228,7 +228,7 @@
                     <div class="row no-margin-hr ">
                         <div class="col-md-5 pull-right no-padding-hr ">
                             <button type="button" class="btn background-defalt save-cancel-button " data-dismiss="modal" ng-click="cancelForm()">Cancel</button>
-                            <button id="savefordashboard" type="button " class="btn background-defalt save-cancel-button tabicon " ng-click="savefordashboard()">Save</button>
+                            <button id="savefordashboard" type="button " class="btn background-defalt save-cancel-button tabicon " ng-click="savefordashboard()">Show</button>
                         </div>
                     </div>
                 </div>
@@ -277,7 +277,7 @@
                     <div class="row no-margin-hr ">
                         <div class="col-md-5 pull-right no-padding-hr ">
                             <button type="button " class="btn background-defalt save-cancel-button " data-dismiss="modal" ng-click="cancelForm()">Cancel</button>
-                            <button type="button " id="saveforvoucher" class="btn background-defalt save-cancel-button tabicon " data-dismiss="modal" ng-click="saveforvoucher()">Save</button>
+                            <button type="button " id="saveforvoucher" class="btn background-defalt save-cancel-button tabicon " data-dismiss="modal" ng-click="saveforvoucher()">Show</button>
                         </div>
                     </div>
                 </div>
