--- a/app/views/resetpassword.html
+++ b/app/views/resetpassword.html
@@ -13,46 +13,42 @@
                     <div class="row form-group no-margin-hr">
                         <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr">
                             <span class="astrick glyphicon glyphicon-asterisk resetpasswordAshtrick"></span>
-                            <input type="text" class="form-control" name="otp" placeholder="Enter Otp" 
-                            ng-model="user.otp" mobile-validation maxlength="6">
+                            <input type="text" class="form-control" name="otp" placeholder="Enter Otp" ng-model="user.otp" mobile-validation maxlength="6" autocomplete="off" autocorrect="off" autocapitalize="off">
                         </div>
                     </div>
-                    
+
                     <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr form-group" ng-show="otperror">
                         <span style="color:#EF5F5F">{{otperrormsg}}</span>
                         <!-- <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.otp.$invalid && !ressetpasswordFrom.otp.$error.required">Please enter valid Otp</span> -->
                     </div>
-                    
+
                     <div class="row form-group no-margin-hr">
                         <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr">
                             <span class="astrick glyphicon glyphicon-asterisk resetpasswordAshtrick"></span>
-                            <input type="password" class="form-control" ng-model="user.pwd" 
-                            name="password" id="password" placeholder="Enter password">
+                            <input type="password" class="form-control" ng-model="user.pwd" name="password" id="password" placeholder="Enter password">
                         </div>
                     </div>
-                  
+
                     <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr form-group" ng-show="passworderror">
-                        <span style="color:#EF5F5F" >{{passworderrormsg}}</span>
+                        <span style="color:#EF5F5F">{{passworderrormsg}}</span>
                         <!-- <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.password.$invalid && !ressetpasswordFrom.password.$error.required">Password should consists of atleaset one uppercase letter and one lowercase letter and one number</span> -->
                     </div>
-                   
+
                     <div class="row form-group no-margin-hr">
                         <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr">
                             <span class="astrick glyphicon glyphicon-asterisk resetpasswordAshtrick"></span>
-                            <input type="password" class="form-control" ng-model="user.confirm_password" 
-                            name="confirmpassword" id="confirmpassword" placeholder="Enter confirm password" 
-                             ng-change="editingfields()">
+                            <input type="password" class="form-control" ng-model="user.confirm_password" name="confirmpassword" id="confirmpassword" placeholder="Enter confirm password" ng-change="editingfields()">
                         </div>
                     </div>
-                    
+
                     <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr form-group" ng-show="confirmpassworderror">
-                        <span style="color:#EF5F5F" >{{confirmpassworderrormsg}}</span>
+                        <span style="color:#EF5F5F">{{confirmpassworderrormsg}}</span>
                         <!-- <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.confirmpassword.$invalid && !ressetpasswordFrom.confirmpassword.$error.required">Password should consists of atleaset one uppercase letter and one lowercase letter and one number</span> -->
                     </div>
-                  
+
                     <div class="row form-group no-margin-hr">
                         <div class="col-md-12 text-center no-padding-hr">
-                            <button type="submit" class="btn login-button background-defalt"  ng-click="resetpasswords()">Reset password</button>
+                            <button type="submit" class="btn login-button background-defalt" ng-click="resetpasswords()">Reset password</button>
                         </div>
                     </div>
                 </form>
