--- a/app/views/roles.html
+++ b/app/views/roles.html
@@ -255,7 +255,7 @@
             </div>
             <div class="modal-body no-padding-vr-bottom">
                 <div class="row no-margin-hr">
-                    <div class="col-md-12">
+                    <div class="col-md-12 no-padding-hr">
                         <table ng-table="roleshistorytable" class="table table-bordered roleshistorytable">
                             <tr ng-repeat="user in $data ">
                                 <td class="vertical-center" title=" 'Date' " sortable=" 'date' ">
@@ -271,6 +271,9 @@
             </div>
             <div class="modal-footer">
                 <div class="row no-margin-hr">
+                    <div class="col-md-5 pull-right no-padding-hr">
+                        <button type="button" class="btn background-defalt save-cancel-button" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
 
