--- a/app/views/company.html
+++ b/app/views/company.html
@@ -299,8 +299,8 @@
                 <h2 class="modal-title ">Company History</h2>
             </div>
             <div class="modal-body no-padding-vr-bottom ">
-                <div class="row no-margin-hr ">
-                    <div class="col-md-12 ">
+                <div class="row no-margin-hr">
+                    <div class="col-md-12 no-padding-hr">
                         <table ng-table="smshistorytable " class="table table-bordered smshistorytable ">
                             <tr ng-repeat="user in $data ">
                                 <td class="vertical-center " title=" 'Date' " sortable=" 'date' ">
@@ -315,7 +315,10 @@
                 </div>
             </div>
             <div class="modal-footer ">
-                <div class="row no-margin-hr ">
+                <div class="row no-margin-hr">
+                    <div class="col-md-5 pull-right no-padding-hr">
+                        <button type="button" class="btn background-defalt save-cancel-button" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
 
