--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -22,7 +22,8 @@
                                 <button type="submit" ng-disabled="validatetoGenrateOtp" ng-click="genarateOtp()" class="btn btn-default btn-block background-defalt color-onbackground">Genrate OTP {{timervalue}}</button>
                             </div>
                             <div class="col-md-4">
-                                <input type="text" class="form-control req-field-color" id="otpfield" ng-readonly="readonlyafterverify" ng-model="props.otp" placeholder="Enter OTP"  maxlength="6" ng-change="validationUptoGenrateOtp()" mobile-validation required>
+                                <input type="text" class="form-control req-field-color" id="otpfield" ng-readonly="readonlyafterverify" ng-model="props.otp" placeholder="Enter OTP" maxlength="6" ng-change="validationUptoGenrateOtp()" mobile-validation required autocomplete="off" autocorrect="off"
+                                    autocapitalize="off">
                             </div>
                             <div class="col-md-4">
                                 <button type="button" ng-disabled="verifyOtp" ng-click="verifyOtps()" class="btn btn-default background-defalt color-onbackground">Verify</button>
@@ -105,5 +106,5 @@
     <h4 class="loading_msg">Loading Please Wait...</h4>
 </div>
 <div class="alert alert-position-success" id="success-alert" style="display:none;">
-        <strong>{{msg}}</strong>
+    <strong>{{msg}}</strong>
 </div>
