--- a/app/views/user.html
+++ b/app/views/user.html
@@ -260,9 +260,9 @@
             </div>
             <div class="modal-footer ">
                 <div class="row no-margin-hr ">
-                    <div class="pull-left ">
+                    <!-- <div class="pull-left ">
                         <button type="button " class="btn btn-danger" data-toggle="modal" ng-disabled="props.user_id.toString() === owner_id" data-target="#deleteModal" ng-click="deletemodelshow()">Delete</button>
-                    </div>
+                    </div> -->
                     <div class="col-md-5 pull-right no-padding-hr ">
                         <button type="button " class="btn background-defalt save-cancel-button " ng-click="editcancelForm()">Cancel</button>
                         <button type="button " class="btn background-defalt save-cancel-button tabicon " ng-click="editingUser()">Save</button>
@@ -386,7 +386,7 @@
             </div>
             <div class="modal-body no-padding-vr-bottom">
                 <div class="row no-margin-hr">
-                    <div class="col-md-12">
+                    <div class="col-md-12 no-padding-hr">
                         <table ng-table="usershistorytable" class="table table-bordered usershistorytable">
                             <tr ng-repeat="user in $data ">
                                 <td class="vertical-center" title=" 'Date' " sortable=" 'date' ">
@@ -402,6 +402,9 @@
             </div>
             <div class="modal-footer">
                 <div class="row no-margin-hr">
+                    <div class="col-md-5 pull-right no-padding-hr">
+                        <button type="button" class="btn background-defalt save-cancel-button" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
 
