--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -7,6 +7,8 @@
 
 body {
     font-family: "proxima-nova" !important;
+    padding: 0px !important;
+    margin: 0px !important;
 }
 
 #userlist .modal-dialog,
